Improved Inves Spectrum+ emulation: alert when a game may crash due to the Inves write-on-interrupt bug
Improved Spectrum Z80 CPU emulation core: add wait state (needed to emulate microdrive)
Improved PCW emulation: allow Plus models videomode changes
Improved Sega Master System emulation: allow to swap controls player 1 <-> player 2
Improved ZSF snapshot: save Datagear DMA state
Allow saving .Z80 TC2048, TC2068, TS2068 snapshots. Allow loading .Z80 TC2048, TC2068 snapshots

Improved Spectrum Next emulation (the following allows, for example, run Atic Atac version for Next):
- Added Layer modes 6 and 7 (blend modes)
- Added stackless NMI
- Added DAC Channels A,B,C,D
- Allow tiles on RAM 7
- Improve display render when only ula enabled (6% less cpu on my computer)
- Fixed 128k/+2a/Pentagon timings
- Fixed DIVMMC mapping after RETN
- Fixed Copper timings
- Fixed esxdos handler call DISK_FILEMAP
- Fixed esxdos handler changing local directory when a .nex snapshot is loaded
- Fixed palette offset for layer 2
- Fixed ULA layer horizontal scroll
- Fixed sprite clipping on left and top border
- Fixed Tile wrapping at 16k/8k
- Fixed DMA burst mode when prescaler=0
- Fixed DMA Transfer restarting the byte count at the end of a transfer
- Fixed cpu speed when opening tape file

Improved Hilow Datadrive emulation:
- Added Raw emulation, like the real device
- Allow ddh variable size (from 3 up to 256 sectors)
- Allow to format only one side on ddh files
- Allow to clear contents when formatting ("c/borrado" or "s/borrado") on ddh files

Improved Debug:
- CPU history: allow to change memory pointer to the PC register show in history
- CPU history: allow to see full history
- Show when CPU is in wait state
- Dissassemble numeric parameters on Z80N (Z80 Spectrum Next) opcodes (NEXTREG NN,A, TEST N, etc)
- Added breakpoint action save-binary