@@ -5423,6 +5423,16 @@ void menu_hardware_recreated_keyboard(MENU_ITEM_PARAMETERS)
 	recreated_zx_keyboard_support.v ^=1;
 }
 
+void menu_hardware_recreated_keyboard_also_on_menu(MENU_ITEM_PARAMETERS)
+{
+    if (recreated_zx_keyboard_support_also_on_menu.v==0) {
+        if (!menu_confirm_yesno_texto("Recreated also on menu","Sure? Your normal keyboard won't work on menu")) {
+            return;
+        }
+    }
+    recreated_zx_keyboard_support_also_on_menu.v ^=1;
+}
+
 void menu_hardware_sdl_raw_read(MENU_ITEM_PARAMETERS)
 {
 	sdl_raw_keyboard_read.v ^=1;
@@ -5602,17 +5612,21 @@ void menu_keyboard_settings(MENU_ITEM_PARAMETERS)
 		menu_add_item_menu_tooltip(array_menu_keyboard_settings,"Enables ZX Recreated mode. Press F1 to see details");
 		menu_add_item_menu_ayuda(array_menu_keyboard_settings,"Enables ZX Recreated mode. You have to consider the following:\n"
 						"- It supports Game Mode/Layer A on ZX Recreated. QWERTY mode/Layer B works like a normal keyboard\n"
-						"- You must use the ZX Recreated only on the machine emulated, not on the menu\n"
-						"- You must use your normal PC keyboard on the menu. Your normal PC keyboard will not work correctly out of the menu when this mode is enabled\n"
-						"- I can't distinguish between normal keyboard and ZX Recreated keyboard key press. "
-						"So if you enable ZX Recreated mode and press keys on your normal PC keyboard, out of the menu, will produce strange combination of keys. "
-						"If you press keys on the ZX Recreated on the menu, will produce strange combination of keys too. "
+						"- Your normal PC keyboard will not work correctly when this mode is enabled because "
+						"I can't distinguish between normal keyboard and ZX Recreated keyboard key press. "
+						"So if you enable ZX Recreated mode and press keys on your normal PC keyboard, will produce strange combination of keys. "
 						"On the other hand, if you have ZX Recreated mode disabled, and press keys on the ZX Recreated, will produce strange combination of keys too.\n"
 						"- If you use Mac OS X, you are probably using the Cocoa driver, so it will work only by enabling this setting\n"
 						"- If you use Linux, you should use the SDL1 or SDL2 video driver, and also enable the SDL Raw keyboard setting. "
 						"It won't work well using other video drivers (last row of keys will fail)\n"
 						"- If you use Windows, you are probably using the SDL1 or SDL2 video driver, so same behaviour as Linux: you must also enable the SDL Raw keyboard setting"
 		);
+
+        if (recreated_zx_keyboard_support.v) {
+            menu_add_item_menu_en_es_ca(array_menu_keyboard_settings,MENU_OPCION_NORMAL,menu_hardware_recreated_keyboard_also_on_menu,NULL,
+                "Also on menu","También en menú","També al menú");
+		    menu_add_item_menu_prefijo_format(array_menu_keyboard_settings,"   [%c] ",(recreated_zx_keyboard_support_also_on_menu.v ? 'X' : ' ') );
+        }
 
 
         if (MACHINE_IS_PCW || MACHINE_IS_CPC) {
