@@ -85,6 +85,7 @@ extern z80_bit keyboard_matrix_error;
 
 extern void recreated_zx_spectrum_keyboard_convert(int tecla, enum util_teclas *tecla_final, int *pressrelease);
 extern z80_bit recreated_zx_keyboard_support;
+extern z80_bit recreated_zx_keyboard_support_also_on_menu;
 extern z80_bit recreated_zx_keyboard_pressed_caps;
 
 extern void nmi_handle_pending_prepost_fetch(void);
